# NormalRandomVariable

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
example/: CMakeLists.txt  README.md  example.cpp
include/: NormalRandomVariable.h
src/: CMakeLists.txt  NormalRandomVariable.cpp
test/: CMakeLists.txt  nrv_test.cpp
